force-app/main/default/objects/Study_Guide_Theme__c/Study_Guide_Theme__c.object-meta.xml
<CustomObject>
    <description>HTML template + theming for the player Study Guide / Readiness Report rendered at /CertGameReadinessReport.</description>
    <label>Study Guide Theme</label>
    <nameField>
        <label>Theme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Guide Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>