force-app/main/default/objects/Study_Guide_Theme__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If false, the theme is hidden from pickers and not selectable for rendering.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>