force-app/main/default/objects/Study_Guide_Theme__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Raw HTML template body. Use {{merge_field}} placeholders defined by CertGameReadinessReportService.</description>
    <label>HTML Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>