force-app/main/default/objects/Study_Guide_Theme__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true and no theme key is supplied, this theme is used. Only one record should have this flag set.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>