force-app/main/default/objects/Study_Guide_Theme__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <defaultValue>100</defaultValue>
    <description
    >Lower values appear first in the admin and end-user theme picker.</description>
    <label>Sort Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>