force-app/main/default/objects/Study_Guide_Theme__c/fields/Theme_Key__c.field-meta.xml
<CustomField>
    <fullName>Theme_Key__c</fullName>
    <description>Stable key used in URLs and code (lowercase, e.g. editorial, dashboard, printable).</description>
    <externalId>true</externalId>
    <label>Theme Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>